welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  var vuBiscuit=false
  for(compteur<- 1 to 6){
    avance()
    if (vuBiscuit){
      vuBiscuit=true
    }
  }
  recule(6)
}